FLAC support, new variable SndExt_RadioCHCount, broken string display
- Added BassFLAC plugin (my precious TIDAL playlist) - another dll to add to OMSI dir, yaaay
- Added a new variable SndExt_RadioCHCount, that shows the CHcount set in opl
- Tried adding a string variable, that would show the song currently playing in playlist or the name of the radio channel (instead of using a stupid hardcoded script in bus), failed at writing string to OMSI, I guess that's not possible and/or broken
- Added some basic comments to code
- String formatting changes (got rid of warnings)
- Fixed console free when debugmode variable is enabled in opl
- Updated opl, sample script and vars

--- a/SuperRadio.vcxproj
+++ b/SuperRadio.vcxproj
@@ -152,16 +152,19 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <Library Include="bass.lib" />
+    <Library Include="bassflac.lib" />
     <Library Include="basshls.lib" />
   </ItemGroup>
   <ItemGroup>
     <None Include="bass.dll" />
+    <None Include="bassflac.dll" />
     <None Include="basshls.dll" />
     <None Include="SuperRadio.def" />
     <None Include="SuperRadio.opl" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="bass.h" />
+    <ClInclude Include="bassflac.h" />
     <ClInclude Include="basshls.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="SimpleIni\ConvertUTF.h" />
